<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory android:title="@string/settings_controls">
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/ic_volume_up"
      android:key="soundsOn"
      android:summary="@string/settings_sounds_summary"
      android:title="@string/settings_sounds_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_volume_up"
        android:key="toSpeechOn"
        android:summary="@string/settings_toSpeech_summary"
        android:title="@string/settings_toSpeech_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_volume_up"
        android:key="SpeechErrorOn"
        android:summary="@string/settings_speech_error_summary"
        android:title="@string/settings_speech_error_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_exposure_plus_1"
        android:key="autoStopwatch"
        android:summary="@string/settings_autoStopwatch_summary"
        android:title="@string/settings_autoStopwatch_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_baseline_link"
        android:key="wifiRelay"
        android:summary="@string/settings_wifi_relay_summary"
        android:title="@string/settings_wifi_relay_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_baseline_phonelink_ring"
        android:key="proximitySensor"
        android:summary="@string/settings_proximity_sensor_summary"
        android:title="@string/settings_proximity_sensor_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_baseline_timer"
        android:key="inverseCounter"
        android:summary="@string/settings_inverseCounter_summary"
        android:title="@string/settings_inverseCounter_title" />
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/ic_vibration"
      android:key="vibrationOn"
      android:summary="@string/settings_vibration_summary"
      android:title="@string/settings_vibration_title" />
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/ic_phone_android"
      android:key="hardControlOn"
      android:summary="@string/settings_hard_summary"
      android:title="@string/settings_hard_title" />
    <CheckBoxPreference
      android:defaultValue="true"
      android:icon="@drawable/ic_exposure_plus_1"
      android:key="labelControlOn"
      android:summary="@string/settings_label_increment_summary"
      android:title="@string/settings_label_increment_title" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/settings_display">
    <ListPreference
      android:defaultValue="light"
      android:entries="@array/themeSelectionEntries"
      android:entryValues="@array/themeSelectionValues"
      android:icon="@drawable/ic_palette"
      android:key="theme"
      android:title="@string/settings_theme" />
    <CheckBoxPreference
      android:defaultValue="false"
      android:icon="@drawable/ic_brightness"
      android:key="keepScreenOn"
      android:summary="@string/settings_keep_on_summary"
      android:title="@string/settings_keep_on_title" />
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/settings_other">
    <Preference
      android:icon="@drawable/ic_delete"
      android:key="removeCounters"
      android:title="@string/settings_wipe_title" />
    <Preference
      android:icon="@drawable/ic_share"
      android:key="exportCounters"
      android:summary="@string/settings_export_summary"
      android:title="@string/settings_export_title" />
    <Preference
      android:enabled="false"
      android:icon="@drawable/ic_info"
      android:key="version"
      android:summary="@string/unknown"
      android:title="@string/settings_version_title" />
  </PreferenceCategory>

</PreferenceScreen>
