<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginLeft="16dp"
  android:layout_marginTop="16dp"
  android:layout_marginRight="16dp"
  android:layout_marginBottom="16dp"
  android:gravity="bottom"
  android:orientation="vertical">

  <TextView
      android:id="@+id/counterLabel"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="0.3"
      android:layout_gravity="top"
      android:layout_marginStart="0dp"
      android:layout_marginTop="0dp"
      android:layout_marginEnd="0dp"
      android:gravity="center"
      android:includeFontPadding="false"
      android:lineSpacingExtra="0dp"
      android:textColor="?android:attr/textColorPrimary"
      android:textSize="80dp"
      tools:text="42" />

  <TextView
      android:id="@+id/chronometer"
      style="@style/chronometer"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_above="@+id/buttons"
      android:gravity="center" />

  <LinearLayout
      android:id="@+id/buttons"
      style="@style/buttons"
      android:orientation="vertical"
      android:layout_alignParentBottom="true">

    <LinearLayout
        android:id="@+id/startStopButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.18"
        android:orientation="horizontal">
      <Button
          android:id="@+id/startButton"
          style="@style/start_button"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.5"
          android:text="@string/start" />
      <Button
          android:id="@+id/stopButton"
          style="@style/stop_button"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="0.5"
          android:text="@string/stop" />
    </LinearLayout>

    <Button
        android:id="@+id/incrementButton"
        style="@style/increment_button"
        android:text="@string/plus" />
    <Button
        android:id="@+id/decrementButton"
        style="@style/decrement_button"

        android:text="@string/minus" />
  </LinearLayout>

</LinearLayout>
